# native_hub

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  clean_build.txt  final_check.txt  package_mac.sh  任务书.txt  修改书.txt
.github/workflows/: android_release.yml
NativeHub.app/Contents/: Info.plist
src/: app_event.rs  backend.rs  context.rs  main.rs
src/engine/: api_client.rs  gh_cli.rs  mod.rs
src/i18n/: mod.rs  strings.rs
src/modules/: auth.rs
src/ui/: app.rs  command_deck.rs  components.rs  effects.rs  file_browser.rs  image_loader.rs  issues.rs  log_viewer.rs  login_view.rs  mod.rs  particles.rs  pull_requests.rs  repo_browser.rs  retro_modal.rs  search.rs  sidebar.rs  style.rs  terminal.rs
