[package]
name = "native_hub"
version = "0.1.0"
edition = "2024"
authors = ["Z1529"]
description = "A 100% native GitHub client built with Rust and egui"

[dependencies]
# GUI Framework
eframe = "0.31"
egui = "0.31"
egui_extras = { version = "0.31", features = ["all_loaders"] }

# Async Runtime
tokio = { version = "1", features = ["full"] }

# HTTP Client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Secure Token Storage
keyring = "3"

# Markdown Rendering (for future use)
egui_commonmark = "0.19"

# Code Syntax Highlighting (for future use)
syntect = "5"

# Charts and Plots (for future use)
egui_plot = "0.31"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error Handling
anyhow = "1"
thiserror = "2"
rand = "0.9.2"
async-trait = "0.1.89"
urlencoding = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
