[package]
name = "native_hub"
version = "0.1.0"
edition = "2024"
authors = ["Z1529"]
description = "A 100% native GitHub client built with Rust and egui"
license = "GPL-3.0"

[package.metadata.android]
package = "com.z1529.nativehub"
label = "NativeHub"
android_version = 33
target_sdk_version = 33
min_sdk_version = 24
icon = "@mipmap/ic_launcher"
fullscreen = true
opengl_debug = false

[dependencies]
# GUI Framework
eframe = { version = "0.33", features = ["android-game-activity"] }
egui = "0.33"
egui_extras = { version = "0.33", features = ["all_loaders"] }

# Async Runtime
tokio = { version = "1", features = ["full"] }

# HTTP Client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Secure Token Storage
keyring = "3"

# Markdown Rendering (using custom http loader with 30s timeout)
egui_commonmark = { version = "0.22", features = ["svg"] }
image = { version = "0.25", features = ["png", "jpeg", "gif", "webp"] }

# Code Syntax Highlighting (for future use)
syntect = "5"

# Charts and Plots (for future use)
egui_plot = "0.33"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error Handling
anyhow = "1"
thiserror = "2"
rand = "0.9.2"
async-trait = "0.1.89"
urlencoding = "2"

[lib]
name = "native_hub"
path = "src/main.rs"
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"
log = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
